footer overlap fix

--- a/shugarcrm/css/base.css
+++ b/shugarcrm/css/base.css
@@ -5,7 +5,7 @@
   }
 
   body {
-    /*margin-bottom: 300px;*/
+    padding-bottom: 300px;
   }
 }
 
@@ -1366,10 +1366,11 @@ footer {
 
 @media (min-width: 992px) {
   footer {
-    /* position: absolute; */
+    position: absolute; 
     bottom: 0;
     width: 100%;
     height: 300px;
+    z-index: 1050;
   }
 }
 
